--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "browserify": "^13.0.0",
     "browserify-incremental": "^3.1.1",
     "react": "^0.14.8",
-    "react-dom": "^0.14.8"
+    "react-dom": "^0.14.8",
+    "react-redux": "^4.4.1",
+    "redux": "^3.3.1"
   },
   "devDependencies": {}
 }
