--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "node": ">= 5.5"
   },
   "dependencies": {
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
