--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "A Mint to QIF converter that also functions as a Rails + React + Redux tutorial app",
   "main": "index.js",
   "dependencies": {
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
-    "browserify-incremental": "^3.1.1"
+    "browserify-incremental": "^3.1.1",
+    "react-dropzone": "^3.3.2"
   },
   "devDependencies": {},
   "scripts": {
