--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Mint to QIF converter that also functions as a Rails + React + Redux tutorial app",
   "main": "index.js",
   "dependencies": {
+    "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
