--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "browserify": "^13.0.0",
     "browserify-incremental": "^3.1.1",
     "react": "^0.14.8",
-    "react-dom": "^0.14.8"
+    "react-dom": "^0.14.8",
+    "react-dropzone": "^3.3.2"
   },
   "devDependencies": {},
   "scripts": {
