--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "browserify-incremental": "^3.1.1",
+    "jquery": "^2.2.2",
+    "jquery-ujs": "^1.2.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-dropzone": "^3.3.2"
