--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jquery-ujs": "^1.2.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
-    "react-dropzone": "^3.3.2"
+    "react-dropzone": "^3.3.2",
+    "superagent": "^1.8.3"
   },
   "devDependencies": {},
   "scripts": {
