--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Mint to QIF converter that also functions as a Rails + React + Redux tutorial app",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.9.1",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
